Move tts trigger to below the card, so it doesn't interfere with touching the right side for correct answers.

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -57,17 +57,12 @@ input {
   text-align: center;
 }
 
-#tts {
+.tts-trigger {
   background-image: url("_speaker-32x32.png") !important;
   background-position: right top;
   background-repeat: no-repeat;
-  position: relative;
-}
-
-.tts-trigger {
-  position: absolute;
-  top: 0;
-  right: 0;
+  display: block;
+  margin: 0.25em auto;
   width: 32px;
   height: 32px;
   cursor: pointer;
