Show a hidden timestamp for when the Javascript was generated.

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -80,6 +80,11 @@ span#tts {
   text-align: left;
 }
 
+#file-generation-timestamp {
+  color: transparent;
+  font-size: 50%;
+}
+
 /** STRUCTURE *****************************************************************/
 
 $line-height: 2em;
