Include git sha and dirty/clean working tree status.

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -80,7 +80,7 @@ span#tts {
   text-align: left;
 }
 
-#file-generation-timestamp {
+#file-generation-info {
   color: transparent;
   font-size: 50%;
 }
