--- a/css/_global.scss
+++ b/css/_global.scss
@@ -66,7 +66,7 @@ input {
   border: 1px outset;
   display: block;
   padding: 5px 10px;
-  margin: 0.25em auto;
+  margin: 0.5em auto;
   cursor: pointer;
   position: fixed;
   bottom: 0;
@@ -120,6 +120,7 @@ body {
 .tags {
   border-top-left-radius: $radius;
   padding-left: $line-height/2;
+  width: 100%;
 }
 
 .tag {
@@ -128,13 +129,14 @@ body {
 }
 
 .tag + .tag {
-  margin-left: 0.1em;
+  margin-left: 0.2em;
 }
 
 .deck {
   border-top-right-radius: $radius;
   vertical-align: middle;
-  width: 100%;
+  text-align: right;
+  white-space: nowrap;
 }
 
 .slash {
