--- a/css/_global.scss
+++ b/css/_global.scss
@@ -44,6 +44,43 @@ $answer-buttons-iphone-height: 100px;
   font-size: small;
 }
 
+cite {
+  font-size: small;
+  display: block;
+  text-align: right;
+  margin-bottom: -2em;
+  color: map-get($colors, dark-gray);
+}
+
+.cloze .card.front,
+.cloze .card.back {
+  text-align: left;
+  position: relative;
+
+	&:before, &:after {
+    display: block;
+    font-size: $font-size * 2;
+    line-height: 1em;
+    color: map-get($colors, dark-gray);
+  }
+
+	&:before {
+    content: "\201C";
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0.1em;
+  }
+
+	&:after {
+    content: "\201D";
+    position: absolute;
+    bottom: -0.5em;
+    right: 0;
+    padding-right: 0.1em;
+  }
+}
+
 th {
   border-bottom: 1px solid;
   font-weight: normal;
