Add parentheses around citations.

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -52,6 +52,14 @@ cite {
   color: map-get($colors, dark-gray);
 }
 
+cite:before {
+  content: "(";
+}
+
+cite:after {
+  content: ")";
+}
+
 .cloze .card.front,
 .cloze .card.back {
   text-align: left;
