--- a/css/_global.scss
+++ b/css/_global.scss
@@ -44,6 +44,10 @@ $answer-buttons-iphone-height: 100px;
   }
 }
 
+.small-text {
+  font-size: $font-size / 2;
+}
+
 .extra {
   font-size: small;
 }
