- Hide the card until setup is done. - Use textContent instead of innerText (the latter respects visibility:hidden). - Only create a card once per test case.

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -9,6 +9,16 @@ $font-size: 48px;
 
 $answer-buttons-iphone-height: 100px;
 
+/** HIDE UNTIL READY **********************************************************/
+
+#qa, .tts-trigger {
+  visibility: hidden;
+
+  .show & {
+    visibility: visible;
+  }
+}
+
 /** TYPOGRAPHY ****************************************************************/
 
 #qa {
