Colorize German nouns by gender.

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,3 +1,7 @@
+$text-dark-blue: #303f9f;
+$text-dark-green: #00695c;
+$text-dark-red: #d32f2f;
+
 $langToColor: (
   gregg: yellow,
   consonants: yellow,
