--- a/css/_global.scss
+++ b/css/_global.scss
@@ -43,10 +43,13 @@ $font-size: 48px;
 }
 
 .cloze,
+.instructions,
 .memory-jog,
 .memory-jog-with-details {
   .card {
     font-size: 0.75em;
+    text-align: left;
+    position: relative;
   }
 
   .card.back {
@@ -78,12 +81,6 @@ cite:after {
   content: ")";
 }
 
-.cloze .card.front,
-.cloze .card.back {
-  text-align: left;
-  position: relative;
-}
-
 blockquote:before, blockquote:after {
   display: block;
   color: map-get($colors, dark-gray);
@@ -106,6 +103,10 @@ blockquote:after {
   bottom: -0.5em;
   right: 0;
   padding-right: 0.1em;
+}
+
+ol ol {
+  list-style-type: lower-latin;
 }
 
 th {
