Only make small-text small on mobile.

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -56,4 +56,8 @@ $answer-buttons-iphone-height: 100px;
     top: 35%;
     left: 47%;
   }
+
+  .style-small-text .card {
+    font-size: 0.75em;
+  }
 }
