--- a/css/_global.scss
+++ b/css/_global.scss
@@ -515,6 +515,7 @@ hr.hidden {
 }
 
 .dictionary-definition {
+  font-weight: normal;
   text-align: left;
 
   .entry {
@@ -522,7 +523,7 @@ hr.hidden {
   }
 
   .metadata {
-    font-style: italic
+    font-style: italic;
   }
 }
 
